# playground

./: .env  .gitignore  pyproject.toml  requirements.txt  wireframe.html
backend/: app.py  main.py  requirements  requirements.txt  test_app.py
backend/api/: agents.py  auth.py  storage.py  threads.py
backend/config/: models.py
backend/config/repositories/: RAG_repository.py  assistant_repository.py  message_repository.py  run_repository.py  threads_repository.py  user_repository.py
backend/tests/: test_user_repository.py
frontend/: app.py  app_com_login.py  app_criar_agente.py  app_test.py  fitz_test.py  main.py  openAI.py  openai_integration.py  test_ocr.py  test_openai.py  test_pdfplumber.py
frontend/login/: config.yaml  login.py  login_auth_google_streamlit.py
frontend/pages/: login.py  openAI.py
