[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.11",
    "itsdangerous>=2.2.0",
    "motor>=3.7.0",
    "openai>=1.65.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pymongo>=4.11.2",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.1",
    "streamlit-oauth>=0.1.14",
    "uvicorn>=0.34.0",
]
